// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/invitation_modal/InvitationModalConfirmStep should match the snapshot for guests with failures and successes 1`] = `
<div
  className="InvitationModalConfirmStep"
>
  <div
    className="modal-icon"
  >
    <InviteIcon />
  </div>
  <h1
    id="invitation_modal_title"
  >
    <injectIntl(FormattedMarkdownMessage)
      defaultMessage="**Guests** Invited to **{teamName}**"
      id="invitation_modal.confirm.guests_title"
      values={
        Object {
          "teamName": "test",
        }
      }
    />
  </h1>
  <h2
    className="subtitle"
  >
    <injectIntl(FormattedMarkdownMessage)
      defaultMessage="**{sentCount, number} {sentCount, plural, one {person} other {people}}** {sentCount, plural, one {has} other {have}} been invited, and **{notSentCount, number} {notSentCount, plural, one {invitation} other {invitations}}** {notSentCount, plural, one {was} other {were}} not sent"
      id="invitation_modal.confirm.members_subtitle"
      values={
        Object {
          "notSentCount": 2,
          "sentCount": 2,
        }
      }
    />
  </h2>
  <div
    className="invitation-modal-confirm-sent"
  >
    <h2>
      <FormattedMessage
        defaultMessage="Successful Invites"
        id="invitation_modal.confirm.sent-header"
      />
    </h2>
    <InvitationModalConfirmStepTable
      invites={
        Array [
          Object {
            "email": "invite1@email",
          },
          Object {
            "email": "invite2@email",
          },
        ]
      }
    />
  </div>
  <div
    className="invitation-modal-confirm-not-sent"
  >
    <h2>
      <FormattedMessage
        defaultMessage="Invitations Not Sent"
        id="invitation_modal.confirm.not-sent-header"
      />
    </h2>
    <InvitationModalConfirmStepTable
      invites={
        Array [
          Object {
            "email": "invite3@email",
          },
          Object {
            "email": "invite4@email",
          },
        ]
      }
    />
  </div>
  <div
    className="button-input-block"
  >
    <button
      className="btn invite-more"
      onClick={[MockFunction]}
    >
      <FormattedMessage
        defaultMessage="Invite More People"
        id="invitation_modal.invite.more"
      />
    </button>
    <button
      className="btn btn-primary confirm-done"
      onClick={[MockFunction]}
    >
      <FormattedMessage
        defaultMessage="Done"
        id="invitation_modal.confirm.done"
      />
    </button>
  </div>
</div>
`;

exports[`components/invitation_modal/InvitationModalConfirmStep should match the snapshot for members with failures and successes 1`] = `
<div
  className="InvitationModalConfirmStep"
>
  <div
    className="modal-icon"
  >
    <InviteIcon />
  </div>
  <h1
    id="invitation_modal_title"
  >
    <injectIntl(FormattedMarkdownMessage)
      defaultMessage="**Members** Invited to **{teamName}**"
      id="invitation_modal.confirm.members_title"
      values={
        Object {
          "teamName": "test",
        }
      }
    />
  </h1>
  <h2
    className="subtitle"
  >
    <injectIntl(FormattedMarkdownMessage)
      defaultMessage="**{sentCount, number} {sentCount, plural, one {person} other {people}}** {sentCount, plural, one {has} other {have}} been invited, and **{notSentCount, number} {notSentCount, plural, one {invitation} other {invitations}}** {notSentCount, plural, one {was} other {were}} not sent"
      id="invitation_modal.confirm.members_subtitle"
      values={
        Object {
          "notSentCount": 2,
          "sentCount": 2,
        }
      }
    />
  </h2>
  <div
    className="invitation-modal-confirm-sent"
  >
    <h2>
      <FormattedMessage
        defaultMessage="Successful Invites"
        id="invitation_modal.confirm.sent-header"
      />
    </h2>
    <InvitationModalConfirmStepTable
      invites={
        Array [
          Object {
            "email": "invite1@email",
          },
          Object {
            "email": "invite2@email",
          },
        ]
      }
    />
  </div>
  <div
    className="invitation-modal-confirm-not-sent"
  >
    <h2>
      <FormattedMessage
        defaultMessage="Invitations Not Sent"
        id="invitation_modal.confirm.not-sent-header"
      />
    </h2>
    <InvitationModalConfirmStepTable
      invites={
        Array [
          Object {
            "email": "invite3@email",
          },
          Object {
            "email": "invite4@email",
          },
        ]
      }
    />
  </div>
  <div
    className="button-input-block"
  >
    <button
      className="btn invite-more"
      onClick={[MockFunction]}
    >
      <FormattedMessage
        defaultMessage="Invite More People"
        id="invitation_modal.invite.more"
      />
    </button>
    <button
      className="btn btn-primary confirm-done"
      onClick={[MockFunction]}
    >
      <FormattedMessage
        defaultMessage="Done"
        id="invitation_modal.confirm.done"
      />
    </button>
  </div>
</div>
`;

exports[`components/invitation_modal/InvitationModalConfirmStep should match the snapshot without failures 1`] = `
<div
  className="InvitationModalConfirmStep"
>
  <div
    className="modal-icon"
  >
    <InviteIcon />
  </div>
  <h1
    id="invitation_modal_title"
  >
    <injectIntl(FormattedMarkdownMessage)
      defaultMessage="**Members** Invited to **{teamName}**"
      id="invitation_modal.confirm.members_title"
      values={
        Object {
          "teamName": "test",
        }
      }
    />
  </h1>
  <h2
    className="subtitle"
  >
    <injectIntl(FormattedMarkdownMessage)
      defaultMessage="**{sentCount, number} {sentCount, plural, one {person} other {people}}** {sentCount, plural, one {has} other {have}} been invited"
      id="invitation_modal.confirm.members_subtitle_without_not_sent"
      values={
        Object {
          "sentCount": 2,
        }
      }
    />
  </h2>
  <div
    className="invitation-modal-confirm-sent"
  >
    <h2>
      <FormattedMessage
        defaultMessage="Successful Invites"
        id="invitation_modal.confirm.sent-header"
      />
    </h2>
    <InvitationModalConfirmStepTable
      invites={
        Array [
          Object {
            "email": "invite1@email",
          },
          Object {
            "email": "invite2@email",
          },
        ]
      }
    />
  </div>
  <div
    className="button-input-block"
  >
    <button
      className="btn invite-more"
      onClick={[MockFunction]}
    >
      <FormattedMessage
        defaultMessage="Invite More People"
        id="invitation_modal.invite.more"
      />
    </button>
    <button
      className="btn btn-primary confirm-done"
      onClick={[MockFunction]}
    >
      <FormattedMessage
        defaultMessage="Done"
        id="invitation_modal.confirm.done"
      />
    </button>
  </div>
</div>
`;

exports[`components/invitation_modal/InvitationModalConfirmStep should match the snapshot without failures or successes 1`] = `
<div
  className="InvitationModalConfirmStep"
>
  <div
    className="modal-icon"
  >
    <InviteIcon />
  </div>
  <h1
    id="invitation_modal_title"
  >
    <injectIntl(FormattedMarkdownMessage)
      defaultMessage="**Members** Invited to **{teamName}**"
      id="invitation_modal.confirm.members_title"
      values={
        Object {
          "teamName": "test",
        }
      }
    />
  </h1>
  <h2
    className="subtitle"
  >
    <injectIntl(FormattedMarkdownMessage)
      defaultMessage="No invitation sent"
      id="invitation_modal.confirm.members_subtitle_without_sent_and_not_sent"
    />
  </h2>
  <div
    className="button-input-block"
  >
    <button
      className="btn invite-more"
      onClick={[MockFunction]}
    >
      <FormattedMessage
        defaultMessage="Invite More People"
        id="invitation_modal.invite.more"
      />
    </button>
    <button
      className="btn btn-primary confirm-done"
      onClick={[MockFunction]}
    >
      <FormattedMessage
        defaultMessage="Done"
        id="invitation_modal.confirm.done"
      />
    </button>
  </div>
</div>
`;

exports[`components/invitation_modal/InvitationModalConfirmStep should match the snapshot without successes 1`] = `
<div
  className="InvitationModalConfirmStep"
>
  <div
    className="modal-icon"
  >
    <InviteIcon />
  </div>
  <h1
    id="invitation_modal_title"
  >
    <injectIntl(FormattedMarkdownMessage)
      defaultMessage="**Members** Invited to **{teamName}**"
      id="invitation_modal.confirm.members_title"
      values={
        Object {
          "teamName": "test",
        }
      }
    />
  </h1>
  <h2
    className="subtitle"
  >
    <injectIntl(FormattedMarkdownMessage)
      defaultMessage="**{notSentCount, number} {notSentCount, plural, one {invitation} other {invitations}}** {notSentCount, plural, one {was} other {were}} not sent"
      id="invitation_modal.confirm.members_subtitle_without_sent"
      values={
        Object {
          "notSentCount": 2,
        }
      }
    />
  </h2>
  <div
    className="invitation-modal-confirm-not-sent"
  >
    <h2>
      <FormattedMessage
        defaultMessage="Invitations Not Sent"
        id="invitation_modal.confirm.not-sent-header"
      />
    </h2>
    <InvitationModalConfirmStepTable
      invites={
        Array [
          Object {
            "email": "invite3@email",
          },
          Object {
            "email": "invite4@email",
          },
        ]
      }
    />
  </div>
  <div
    className="button-input-block"
  >
    <button
      className="btn invite-more"
      onClick={[MockFunction]}
    >
      <FormattedMessage
        defaultMessage="Invite More People"
        id="invitation_modal.invite.more"
      />
    </button>
    <button
      className="btn btn-primary confirm-done"
      onClick={[MockFunction]}
    >
      <FormattedMessage
        defaultMessage="Done"
        id="invitation_modal.confirm.done"
      />
    </button>
  </div>
</div>
`;
